log
Fri Apr 17 06:38:07 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
036fb41
Fri Apr 17 06:42:13 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
f829025
Fri Apr 17 06:51:25 PM UTC 2026: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|6
total_score: 10/60
ae12192
Fri Apr 17 07:11:35 PM UTC 2026: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
c1b3b3e
Fri Apr 17 07:38:24 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
6d47b72
Sun Apr 19 01:45:04 AM UTC 2026: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
1339356
Sun Apr 19 01:46:05 AM UTC 2026: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|5
total_score: 15/60
68f1794
Sun Apr 19 01:46:32 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
5170022
Sun Apr 19 01:46:49 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
9b456bf
Sun Apr 19 01:50:18 AM UTC 2026: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  4|5
total_score: 15/60
653a899
Sun Apr 19 02:00:09 AM UTC 2026: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 20/60
5c0fe37
Sun Apr 19 02:04:16 AM UTC 2026: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
3958712
Sun Apr 19 02:11:37 AM UTC 2026: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|3
total_score: 30/60
4dba9e8
Sun Apr 19 02:20:04 AM UTC 2026: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:148:38: error: statement with no effect [-Werror=unused-value]
  148 |             map->buckets[index]->key == NULL;
      |                                      ^
cc1: all warnings being treated as errors
d736c5c
Sun Apr 19 02:20:26 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
728438f
Sun Apr 19 02:25:42 AM UTC 2026: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  11|2
total_score: 40/60
264d13c
Sun Apr 19 02:28:52 AM UTC 2026: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 40/60
51862b9
Sun Apr 19 02:30:33 AM UTC 2026: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘nextMap’:
hashmap.c:187:33: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
  187 |         if (map->buckets[index] != NULL & map->buckets[index]->key != NULL) {
      |                                 ^
hashmap.c:189:32: error: subscripted value is neither array nor pointer nor vector
  189 |             return map->current[index];
      |                                ^
cc1: all warnings being treated as errors
bd60614
Sun Apr 19 02:30:53 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘nextMap’:
hashmap.c:189:32: error: subscripted value is neither array nor pointer nor vector
  189 |             return map->current[index];
      |                                ^
60af374
Sun Apr 19 02:31:17 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 50/60
98c8a28
Sun Apr 19 02:32:50 AM UTC 2026: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 50/60
dc42461
Sun Apr 19 02:36:13 AM UTC 2026: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:218:10: error: unused variable ‘old_capacity’ [-Werror=unused-variable]
  218 |     long old_capacity = map->capacity;
      |          ^~~~~~~~~~~~
hashmap.c:217:12: error: unused variable ‘old_buckets’ [-Werror=unused-variable]
  217 |     Pair** old_buckets = map->buckets;
      |            ^~~~~~~~~~~
cc1: all warnings being treated as errors
c603270
Sun Apr 19 02:38:50 AM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:226:25: error: subscripted value is neither array nor pointer nor vector
  226 |         if (old_capacity[i] != NULL && old_buckets[i]->key != NULL) {
      |                         ^
730dcff
